<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

        <com.android.research.researchproject.customviews.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:singleLine="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

        <com.android.research.researchproject.customviews.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:singleLine="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.android.research.researchproject.customviews.CustomButton
            android:id="@+id/btn_signin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#464B54"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <com.android.research.researchproject.customviews.CustomTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="right"
            android:paddingRight="3dp"
            android:text="@string/label_forgot_password" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dp"
                android:text="@string/label_not_registered_yet" />


            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_click_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_already_registered"
                android:paddingRight="3dp"
                android:text="@string/label_click_here"
                android:textColor="@color/blue" />


            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_click_here"
                android:text="@string/label_to_sign_up" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>