<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.android.research.researchproject.customviews.CustomTextView
        android:id="@+id/tv_label_welcome"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:text="@string/label_welcome"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_welcome"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star" />

    </RelativeLayout>


    <com.android.research.researchproject.customviews.CustomTextView
        android:id="@+id/tv_label_skip"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dip"
        android:gravity="right"
        android:padding="20dip"
        android:alpha="0.5"
        android:text="@string/label_skip" />



    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_fb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_label_skip"
        android:textColor="@color/white"
        android:alpha="0.5"
        />


    <LinearLayout
        android:id="@+id/user_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/btn_fb_login"
        android:orientation="horizontal">


        <com.android.research.researchproject.customviews.CustomTextView
            style="@android:style/TextAppearance.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_guest" />

        <com.android.research.researchproject.customviews.CustomTextView
            style="@android:style/TextAppearance.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_artiest" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user_type_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/user_type"
        android:orientation="horizontal">


        <ImageView android:id="@+id/img_guest"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:alpha="0.5"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:background="@drawable/guest" />


        <ImageView android:id="@+id/img_artist"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:padding="7dp"
            android:layout_marginRight="18dp"
            android:alpha="0.5"
            android:background="@drawable/artist" />


    </RelativeLayout>

</RelativeLayout>