<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:paddingBottom="20dp"
            android:background="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"

                android:src="@drawable/phone" />

            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_91"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/mobile"
                android:layout_toRightOf="@+id/mobile"
                android:text="+ 91"
                android:textSize="20sp" />

            <com.android.research.researchproject.customviews.CustomEditText
                android:id="@+id/et_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/tv_91"
                android:layout_toRightOf="@+id/tv_91"
                android:background="@null"
                android:digits="0987654321"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="20sp" />


        </RelativeLayout>

        <com.android.research.researchproject.customviews.CustomEditText
            android:id="@+id/et_phone_old"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:singleLine="true"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

        <com.android.research.researchproject.customviews.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:singleLine="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />

        <com.android.research.researchproject.customviews.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:singleLine="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.android.research.researchproject.customviews.CustomButton
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#464B54"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dp"
                android:text="@string/label_already_registered" />


            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_click_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_already_registered"
                android:paddingRight="3dp"
                android:text="@string/label_click_here"
                android:textColor="@color/blue" />


            <com.android.research.researchproject.customviews.CustomTextView
                android:id="@+id/tv_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_click_here"
                android:text="@string/label_to_sign_in" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>